[LFC] Miscellaneous fixes to fix simple absolute positioning. https://bugs.webkit.org/show_bug.cgi?id=186962

Reviewed by Antti Koivisto.

1. Collect out-of-flow formatting root descendants.
2. Remove invalid and redundant ASSERTs
  invalid because the assertion is missing border, padding etc.
  redundant becasue we assert on geometry correctness in validateGeometryConstraintsAfterLayout.

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::computeOutOfFlowHorizontalGeometry const):
(WebCore::Layout::FormattingContext::computeOutOfFlowVerticalGeometry const):
(WebCore::Layout::FormattingContext::layoutOutOfFlowDescendants const):
* layout/layouttree/LayoutContainer.cpp:
(WebCore::Layout::Container::addOutOfFlowDescendant):
(WebCore::Layout::Container::setOutOfFlowDescendants): Deleted.
* layout/layouttree/LayoutContainer.h:
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createSubTree):


Canonical link: https://commits.webkit.org/202217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233125 268f45cc-cd09-0410-ab3c-d52691b4dbfc