Source/WebCore/layout/layouttree/LayoutContainer.cpp
@@ -91,9 +91,12 @@ void Container::setLastChild(Box& childBox)
     m_lastChild = &childBox;
 }
 
-void Container::setOutOfFlowDescendants(Vector<WeakPtr<Box>>&& descendantList)
+void Container::addOutOfFlowDescendant(const Box& outOfFlowBox)
 {
-    m_outOfFlowDescendants = WTFMove(descendantList);
+    // Since we layout the out-of-flow boxes at the end of the formatting context layout,
+    // it's okay to store them at the formatting context root level -as opposed to the containing block level.
+    ASSERT(establishesFormattingContext());
+    m_outOfFlowDescendants.append(makeWeakPtr(const_cast<Box&>(outOfFlowBox)));
 }
 
 }
